# xray-invert

./: .gitignore  README.md  pyproject.toml  scratch.ipynb  simple_transform.py  test.py  uknown_transform.py  utils.py
chest_xray_sim/: constants.py  types.py
chest_xray_sim/data/: __init__.py  chexpert_dataset.py  loader.py  priors.py  segment.py  segmentation.py  segmentation_dataset.py  utils.py
chest_xray_sim/datasets/chexpert_plus/: chexpert_plus_dataset_builder_test.py
chest_xray_sim/inverse/: __init__.py  core.py  eval.py  individual_gradient_optimizer.py  metrics.py  operators.py
chest_xray_sim/utils/: initialization.py  io.py  metrics.py  results.py
datasets/chexpert/: CITATIONS.bib  README.md  checksums.tsv  chexpert_dataset_builder.py  chexpert_dataset_builder_test.py
experiments/: batch_known_transform.py  batch_unknown_transform.py  eval.py  full.py  full_common.py  full_individual.py  individual_operator.py  initialization.py  logging_utils.py  loss.py  models.py  projections.py  segmentation.py  segmentation_utils.py  simple_transform.py  single_unkown_transform.py  test.py  uknown_transform.py  unsharp_masking.py  utils.py  visualization.py  wandb_fixer.py  wandb_utils.py  wrapper.py
experiments/sweep_configs/: full.yaml  full_smaller.yaml  individual_gradient.yaml  no_tv.yaml  only_tv.yaml  optimal.yaml  single.yaml  zero_gmse.yaml  zero_tv.yaml
experiments/utils/: __init__.py  logging.py  tracking.py
figures/: main.py
notebooks/: __init__.py
scripts/: analyze_regularization_weights.py  compare.py  simple_l_curve.py
src/: core.py  main.py  metrics.py  processings.py  results.py
