[project]
name = "chest-xray-sim"
version = "0.1.0"
description = "Recovering x-ray transmission map from processed chest x-ray images"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dm-pix>=0.4.4",
    "ipykernel>=6.29.5",
    "jax==0.5.0",
    "jaxtyping>=0.2.37",
    "matplotlib>=3.10.0",
    "nbdime>=4.0.2",
    "numpy>=2.2.2",
    "opencv-python>=4.11.0.86",
    "optax>=0.2.4",
    "pillow>=11.1.0",
    "pydicom>=3.0.1",
    "scipy>=1.15.1",
    "wandb>=0.19.8",
]

[tool.setuptools]
packages = ['chest_xray_sim']
