[project]
name = "chest-xray-sim"
version = "0.1.0"
description = "Recovering x-ray transmission map from processed chest x-ray images"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # "dm-pix>=0.4.4",
    # "ipykernel>=6.29.5",
    # "jax==0.5.0",
    # "jaxtyping>=0.2.37",
    # "matplotlib>=3.10.0",
    # "nbdime>=4.0.2",
    # "numpy>=2.2.2",
    # "opencv-python>=4.11.0.86",
    # "optax>=0.2.4",
    # "pandas-stubs>=2.2.3.250308",
    # "pandas>=2.2.3",
    # "pillow>=11.1.0",
    # "pydicom>=3.0.1",
    # "scikit-image>=0.25.2",
    # "scipy>=1.15.1",
    # "torchxrayvision>=1.3.3",
    # "wandb>=0.19.8",
    # "tensorflow-datasets>=4.9.8",
    # "protobuf==3.20.*",
    "protobuf==3.20.*",
    "tensorflow-datasets>=4.9.8",
    "tensorflow>=2.19.0",
    "jax>=0.5.3",
    "dm-pix>=0.4.4",
    "wandb>=0.19.9",
    "optax>=0.2.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "torchxrayvision>=1.3.3",
    "jaxtyping>=0.3.1",
    "wheel>=0.45.1",
    "mlcroissant>=1.0.16",
    "apache-beam>=2.64.0",
    "matplotlib>=3.10.1",
]

[tool.setuptools]
packages = ['chest_xray_sim']

[tool.basedpyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
ignore = ["F722"]

[tool.uv.sources]
chest-xray-sim = { workspace = true }

[dependency-groups]
dev = [
    "chest-xray-sim",
    "ipykernel>=6.29.5",
    "nbdime>=4.0.2",
    "pandas-stubs>=2.2.3.250308",
]


