[project]
name = "chest-xray-sim"
version = "0.1.0"
description = "Recovering x-ray transmission map from processed chest x-ray images"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "protobuf==3.20.*",
    "jax>=0.5.3",
    "dm-pix>=0.4.4",
    "wandb>=0.19.9",
    "optax>=0.2.4",
    "pandas>=2.2.3",
    "torchxrayvision>=1.3.3",
    "jaxtyping>=0.3.1",
    "wheel>=0.45.1",
    "matplotlib",
    "torchvision",
    "opencv-python>=4.11.0.86",
    "joblib>=1.5.0",
]

[tool.uv.sources]
chest-xray-sim = { workspace = true }

[tool.setuptools]
packages = ['chest_xray_sim']

[tool.basedpyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"

[tool.ruff.lint]
ignore = ["F722"]

[dependency-groups]
dev = [
    "basedpyright>=1.29.0",
    "chest-xray-sim",
    "ipykernel>=6.29.5",
    "nbdime>=4.0.2",
    "pandas-stubs>=2.2.3.250308",
]


